syntax = "proto3";

option csharp_namespace = "HappyCoding.GrpcCommunicationFeatures.ProtoDefinition";

// Default ASP.NET Core sample for client -> server calls using gRpc

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
